Resolve promises synchronously sometimes

https://codereview.chromium.org/2615253002 changed
~PlayStateUpdateScope() to resolve promises asynchronously in order to
avoid script execution inside a forbidden scope. However, this causes
the promises to behave differently from expected in some cases,
demonstrated in part by a crash in the interfaces/Animation/cancel.html
test due to failing a DCHECK.

This patch modifies the promise resolution code to first check whether
we are in a forbidden scope, and only resolve the promise asynchronously
if so.

BUG=708887

Review-Url: https://codereview.chromium.org/2808013002
Cr-Commit-Position: refs/heads/master@{#463907}